# dataline

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md
benches/: matching.rs
data/: hk_gov_romanization.json  hk_gov_romanization.txt  sample_1m.csv
docs/adr/: adr-025-config-driven-rules.md
paper/: build.sh  dataline.tex  references.bib
src/: lib.rs  types.rs  wasm.rs
src/address/: mod.rs
src/blocking/: mod.rs
src/clustering/: mod.rs
src/matchers/: mod.rs  signals.rs
src/names/: mod.rs
src/pipeline/: mod.rs  results_db.rs
src/rules/: mod.rs
src/survivorship/: mod.rs
src/tokenizers/: mod.rs
tests/: end_to_end.rs  gen_test_data.rs
tests/fixtures/: hk_synthetic_1000.csv  hk_synthetic_1000_ground_truth.csv
