[package]
name = "dataline"
version = "0.1.0"
edition = "2021"
description = "CJK-native master data matching engine"
license = "Apache-2.0"
repository = "https://github.com/digital-rain-tech/dataline"

[dependencies]
# String similarity
strsim = "0.11"

# Parallelism
rayon = "1.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CJK text processing
jieba-rs = "0.7"
# rust-pinyin and opencc-rust added once we validate API stability

# Error handling
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "matching"
harness = false
