[package]
name = "dataline"
version = "0.1.0"
edition = "2021"
description = "CJK-native master data matching engine"
license = "Apache-2.0"
repository = "https://github.com/digital-rain-tech/dataline"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# String similarity
strsim = "0.11"

# Parallelism
rayon = "1.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CJK text processing
jieba-rs = { version = "0.7", optional = true }
pinyin = "0.11"

# WASM bindings
wasm-bindgen = { version = "0.2", optional = true }

# Serialization (binary, for work queue files)
bincode = "1"

# SQLite for match results and quality analysis
rusqlite = { version = "0.32", features = ["bundled"] }

# Error handling
thiserror = "2"

[features]
default = ["jieba"]
jieba = ["dep:jieba-rs"]
wasm = ["dep:wasm-bindgen"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "dataline-demo"
path = "src/bin/demo.rs"

[[bin]]
name = "dataline-rules-gen"
path = "src/bin/rules_gen.rs"

[[bench]]
name = "matching"
harness = false
